--- a/Napi.Example/Napi.Example.csproj
+++ b/Napi.Example/Napi.Example.csproj
@@ -128,10 +128,11 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\IModel.cs" />
-    <Compile Include="Models\Venues\Event.cs" />
-    <Compile Include="Models\Venues\Venue.cs" />
+    <Compile Include="Models\Event.cs" />
+    <Compile Include="Modules\BaseModule.cs" />
+    <Compile Include="Modules\EventModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\ModelRepository.cs" />
+    <Compile Include="Repository\EventRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -148,7 +149,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Modules\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
