--- a/Napi.Example/Web.config
+++ b/Napi.Example/Web.config
@@ -5,27 +5,20 @@
   -->
 
 <configuration>
-  <appSettings>
-    <add key="webpages:Version" value="2.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="PreserveLoginUrl" value="true" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  </appSettings>
+  <location path="API">
+    <system.web>
+      <compilation debug="true" targetFramework="4.5" />
+      <httpHandlers>
+        <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
+      </httpHandlers>
+    </system.web>
 
-  <system.web>
-    <compilation debug="true" targetFramework="4.0" />
-    <httpHandlers>
-      <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
-    </httpHandlers>
-  </system.web>
-
-  <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
-    <validation validateIntegratedModeConfiguration="false"/>
-    <httpErrors existingResponse="PassThrough"/>
-    <handlers>
-      <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
-    </handlers>
-  </system.webServer>
+    <system.webServer>
+      <modules runAllManagedModulesForAllRequests="true" />
+      <validation validateIntegratedModeConfiguration="false" />
+      <handlers>
+        <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
+      </handlers>
+    </system.webServer>
+  </location>
 </configuration>
